Modified project section

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 										<p>This is an AI project which will be shipped to 1000 users or will aim to generate $1000 in revenue.</p>
 									</li>
 								</ul>
-								<footer class="major">
+								<!-- <footer class="major">
 									<ul class="actions special">
 										<li><a href="generic.html" class="button">Learn More</a></li>
 									</ul>
-								</footer>
+								</footer> -->
 							</section>
 
 						<!-- Second Section -->
